--- a/css/agency.css
+++ b/css/agency.css
@@ -666,7 +666,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(../img/contact_ball.png);
+    background-image: url(../img/contact_block.jpg);
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
